test/fail/non_special_char.min
program
    number c := '\v'
start
end